--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -26,7 +26,26 @@
       <div class="sidebar">
         <div class="sidebar-header">
           <h2>Request History</h2>
-          <button id="clear-requests" class="clear-button">Clear Requests</button>
+          <button id="clear-requests" class="clear-button">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              width="16"
+              height="16"
+              fill="none"
+              stroke="currentColor"
+              stroke-width="2"
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              style="margin-right: 5px"
+            >
+              <polyline points="3 6 5 6 21 6"></polyline>
+              <path
+                d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
+              ></path>
+            </svg>
+            Clear Requests
+          </button>
         </div>
         <div class="filter-container">
           <input
